[package]
name = "petz_ih"
version = "0.1.0"
authors = ["Jeremiah Lister <jwlister@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
image = "0.23.14"
walkdir = "2.3.2"
